WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270860
REGRESSION (
275949@main
): 18 imported WPT /i18n/.../css-text-line-break* tests are consistent/flaky failures.
https://bugs.webkit.org/show_bug.cgi?id=270860
Summary
REGRESSION (275949@main): 18 imported WPT /i18n/.../css-text-line-break* test...
Jay Stfleur
Reported
2024-03-12 10:29:41 PDT
Created
attachment 470323
[details]
Tests text diffs Description: imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-cpm-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-hyphens-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-hyphens-normal.html imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-po-loose.html Are consistent failures on Ventura+ WK2 x86_64 Release but is flaky on Monterey WK2 x86_64 Release. Tests are flaky on Ventura+ wk1 arm64 and x86_64, tests is flaky on iOS Release and consistent on debug History: Added Text diff as Zip folder
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-text%2Fi18n%2Fother-lang%2Fcss-text-line-break-de-cpm-loose.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-text%2Fi18n%2Fother-lang%2Fcss-text-line-break-de-hyphens-loose.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-text%2Fi18n%2Fother-lang%2Fcss-text-line-break-de-hyphens-normal.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-text%2Fi18n%2Fother-lang%2Fcss-text-line-break-de-po-loose.html
--- /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-po-loose-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Release-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-po-loose-actual.txt @@ -1,12 +1,51 @@ -PASS 00B0 DEGREE SIGN may NOT appear at line start if de and loose -PASS 2030 PER MILLE SIGN may NOT appear at line start if de and loose -PASS 2032 PRIME may NOT appear at line start if de and loose -PASS 2033 DOUBLE PRIME may NOT appear at line start if de and loose -PASS 2035 REVERSED PRIME may NOT appear at line start if de and loose -PASS 2103 DEGREE CELSIUS may NOT appear at line start if de and loose -PASS 2109 DEGREE FAHRENHEIT may NOT appear at line start if de and loose -PASS FE6A SMALL PERCENT SIGN may NOT appear at line start if de and loose -PASS FF05 FULLWIDTH PERCENT SIGN may NOT appear at line start if de and loose -PASS FFE0 FULLWIDTH CENT SIGN may NOT appear at line start if de and loose - +FAIL 00B0 DEGREE SIGN may NOT appear at line start if de and loose assert_approx_equals: expected 80.9970703125 +/- 1 but got 50.9970703125 +FAIL 2030 PER MILLE SIGN may NOT appear at line start if de and loose assert_approx_equals: expected 99 +/- 1 but got 69 +FAIL 2032 PRIME may NOT appear at line start if de and loose assert_approx_equals: expected 78.990234375 +/- 1 but got 48.990234375 +FAIL 2033 DOUBLE PRIME may NOT appear at line start if de and loose assert_approx_equals: expected 84.6884765625 +/- 1 but got 54.6884765625 +FAIL 2035 REVERSED PRIME may NOT appear at line start if de and loose assert_approx_equals: expected 78.990234375 +/- 1 but got 48.990234375 +FAIL 2103 DEGREE CELSIUS may NOT appear at line start if de and loose assert_approx_equals: expected 102.662109375 +/- 1 but got 72.662109375 +FAIL 2109 DEGREE FAHRENHEIT may NOT appear at line start if de and loose assert_approx_equals: expected 99.322265625 +/- 1 but got 69.322265625 +FAIL FE6A SMALL PERCENT SIGN may NOT appear at line start if de and loose assert_approx_equals: expected 99 +/- 1 but got 69 +FAIL FF05 FULLWIDTH PERCENT SIGN may NOT appear at line start if de and loose assert_approx_equals: expected 99 +/- 1 but got 69 +FAIL FFE0 FULLWIDTH CENT SIGN may NOT appear at line start if de and loose assert_approx_equals: expected 99 +/- 1 but got 69
Attachments
Tests text diffs
(5.67 KB, application/zip)
2024-03-12 10:29 PDT
,
Jay Stfleur
no flags
Details
[fast-cq]Patch
(6.25 KB, patch)
2024-04-03 09:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-12 10:30:03 PDT
<
rdar://problem/124463423
>
Ben Schwartz
Comment 2
2024-03-13 13:24:10 PDT
Full list of [currently known] tests with this issue: imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-cpm-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-hyphens-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-hyphens-normal.html imported/w3c/web-platform-tests/css/css-text/i18n/other-lang/css-text-line-break-de-po-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-cj-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-cj-normal.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-cpm-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-hyphens-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-hyphens-normal.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-iteration-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/unknown-lang/css-text-line-break-po-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-cj-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-cj-normal.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-cpm-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-hyphens-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-hyphens-normal.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-iteration-loose.html imported/w3c/web-platform-tests/css/css-text/i18n/zh/css-text-line-break-zh-po-loose.html I will update the test expectations Jay set in
276008@main
to reflect the new findings.
alan
Comment 3
2024-04-03 09:29:06 PDT
Created
attachment 470743
[details]
[fast-cq]Patch
EWS
Comment 4
2024-04-03 14:37:18 PDT
Committed
277033@main
(4754c8d81df8): <
https://commits.webkit.org/277033@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470743
[details]
.
EWS
Comment 5
2024-04-25 15:37:13 PDT
Test gardening commit
278008@main
(2f1dda6fe413): <
https://commits.webkit.org/278008@main
> Reviewed commits have been landed. Closing PR #27767 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug