REGRESSION (275949@main): 18 imported WPT /i18n/.../css-text-line-break* tests are consistent/flaky failures. https://bugs.webkit.org/show_bug.cgi?id=270860 <rdar://problem/124463423>

Reviewed by Antti Koivisto.

Same content with different locale may produce different soft wrap opportunities. Let's include computedLocal in the key.

* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/layout/formattingContexts/inline/text/TextBreakingPositionCache.cpp:
(WebCore::Layout::add):
* Source/WebCore/layout/formattingContexts/inline/text/TextBreakingPositionCache.h:
* Source/WebCore/layout/formattingContexts/inline/text/TextBreakingPositionContext.h:
(WebCore::Layout::TextBreakingPositionContext::TextBreakingPositionContext):

Canonical link: https://commits.webkit.org/277033@main